--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.6.5",
     "ionicons": "^7.0.0",
+    "require": "^2.4.20",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "webgazer": "^3.3.0",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
@@ -50,6 +52,7 @@
     "@capacitor/cli": "5.6.0",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^20.11.15",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^7.26.0",
