--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "@angular/platform-browser-dynamic": "^17.0.2",
     "@angular/router": "^17.0.2",
     "@angular/service-worker": "^17.2.3",
-    "@capacitor/android": "^5.6.0",
+    "@capacitor/android": "^5.7.5",
     "@capacitor/app": "^5.0.6",
     "@capacitor/camera": "^5.0.8",
-    "@capacitor/core": "5.6.0",
+    "@capacitor/core": "^5.7.5",
     "@capacitor/filesystem": "^5.2.0",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/ios": "^5.6.0",
@@ -37,6 +37,7 @@
     "require": "^2.4.20",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.1",
     "webgazer": "^3.3.0",
     "zone.js": "~0.14.2"
   },
@@ -54,6 +55,7 @@
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.11.15",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^7.26.0",
